--- a/MyStore.Web/Views/Product/_Form.cshtml
+++ b/MyStore.Web/Views/Product/_Form.cshtml
@@ -3,9 +3,15 @@
 @Html.HiddenFor(m => m.ProductId)
 
 <div class="form-group">
-    @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
+    @Html.LabelFor(m => m.Name, new {@class = "col-md-2 control-label"})
     <div class="col-md-10">
-        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Name, new {@class = "form-control"})
+    </div>
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.Price, new { @class = "col-md-2 control-label" })
+    <div class="col-md-10">
+        @Html.TextAreaFor(m => m.Price, new { @class = "form-control" })
     </div>
 </div>
 <div class="form-group">
