--- a/MyStore.Web/Views/Product/_Form.cshtml
+++ b/MyStore.Web/Views/Product/_Form.cshtml
@@ -11,7 +11,7 @@
 <div class="form-group">
     @Html.LabelFor(m => m.Price, new { @class = "col-md-2 control-label" })
     <div class="col-md-10">
-        @Html.TextAreaFor(m => m.Price, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Price, new { @class = "form-control" })
     </div>
 </div>
 <div class="form-group">
