--- a/MyStore.Web/Views/Shared/Create.cshtml
+++ b/MyStore.Web/Views/Shared/Create.cshtml
@@ -14,10 +14,8 @@
 
 @section Actions
 {
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input id="buttonSave" type="submit" value="Create" class="btn btn-default" />
-            <input id="buttonCancel" type="button" value="Cancel" class="btn btn-default" data-form-action="@(!string.IsNullOrEmpty(Model.RedirectUrl) ? Model.RedirectUrl : Url.Action("Index"))" />
-        </div>
+    <div style="margin-top: 10px">
+        <input id="buttonSave" type="submit" value="Create" class="btn btn-default" />
+        <input id="buttonCancel" type="button" value="Cancel" class="btn btn-default" data-form-action="@(!string.IsNullOrEmpty(Model.RedirectUrl) ? Model.RedirectUrl : Url.Action("Index"))" />
     </div>
 }
