--- a/MyStore.Web/Views/Client/_Form.cshtml
+++ b/MyStore.Web/Views/Client/_Form.cshtml
@@ -2,6 +2,32 @@
 
 @Html.HiddenFor(m => m.ClientId)
 
+@if (Model.IsNew)
+{
+    <div class="form-group">
+        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+        </div>
+    </div>
+}
+else
+{
+    <div class="form-group">
+        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DisplayTextFor(m => m.UserName)
+        </div>
+    </div>
+}
+<hr/>
+
 <div class="form-group">
     @Html.LabelFor(m => m.FirstName, new {@class = "col-md-2 control-label"})
     <div class="col-md-10">
