--- a/MyStore.Web/Views/Shared/_Layout.cshtml
+++ b/MyStore.Web/Views/Shared/_Layout.cshtml
@@ -22,15 +22,26 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("MyStore", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
+                @Html.ActionLink("MyStore", "Index", "Home", new {@class = "navbar-brand"})
             </div>
             <div class="navbar-collapse collapse">
                 @if (Request.IsAuthenticated)
                 {
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Products", "Index", "Product")</li>
-                        <li>@Html.ActionLink("Clients", "Index", "Client")</li>
-                        <li>@Html.ActionLink("Orders", "Index", "Order")</li>
+
+                        @if (!this.UserContext.ClientId.HasValue)
+                        {
+                            <li>@Html.ActionLink("Clients", "Index", "Client")</li>
+                        }
+
+                        <li>@Html.ActionLink("Orders", "Index", "Order", new {ClientId = this.UserContext.ClientId }, null)</li>
+
+                        @if (this.UserContext.ClientId.HasValue)
+                        {
+                            <li>@Html.ActionLink("My Basket", "Index", "BasketItem")</li>
+                        }
+                        
                     </ul>
                 }
                 @Html.Partial("_LoginPartial")
